[package]
name = "mltk-rust"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "_mltk_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
