[package]
name = "mltk-rust"
version = "0.12.4"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "_mltk_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
regex = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "drift"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
